[gd_scene load_steps=21 format=2]

[ext_resource path="res://StateMachine/Camera.gd" type="Script" id=1]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/pasta_flloor.png" type="Texture" id=4]
[ext_resource path="res://Assets/Kitchen floor (1).png" type="Texture" id=5]
[ext_resource path="res://Enemy/Enemy_ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy/Enemy_flying.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ingredients/Ingredients_Container.gd" type="Script" id=8]
[ext_resource path="res://Ingredients/Food_Pasta.tscn" type="PackedScene" id=9]
[ext_resource path="res://Ingredients/Food_Sauce.tscn" type="PackedScene" id=10]
[ext_resource path="res://Areas/Stown.gd" type="Script" id=11]

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 4704, -752, 4704, 392, 3928, 384, 3896, 256, 3016, -752, 2160, 248, -120, -776, -120, -208, 2136, 312, 568, 312, -104, 376, 552, 392 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 0, 3, 5 ), PoolIntArray( 6, 4, 5, 7 ), PoolIntArray( 7, 5, 8, 9 ), PoolIntArray( 10, 7, 9, 11 ) ]
outlines = [ PoolVector2Array( -104, 376, -120, -208, -120, -776, 3016, -752, 4704, -752, 4704, 392, 3928, 384, 3896, 256, 2160, 248, 2136, 312, 568, 312, 552, 392 ) ]

[sub_resource type="Environment" id=1]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 75, 1, 78, 0, 8.75, 64, 9.75 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 86, 67, 0, 67, 0, 0, 86, 0 )

[sub_resource type="TileSet" id=5]
0/name = "icon.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "pasta_flloor.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 108, 73, 3, 3 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 7 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Kitchen floor (1).png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 32, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "pasta_flloor.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 26, 42, 87, 67 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 9 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 11 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 3 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Ground" type="TileMap" parent="."]
tile_set = SubResource( 5 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -524214, 1, 0, -458678, 1, 0, -393142, 1, 0, -327606, 1, 0, -262070, 1, 0, -196534, 1, 0, -65539, 1, 0, -130998, 1, 0, -3, 1, 0, -65462, 1, 0, 65533, 1, 0, 54, 3, 0, 55, 3, 0, 56, 3, 0, 57, 3, 0, 58, 3, 0, 59, 3, 0, 68, 3, 0, 74, 1, 0, 131069, 1, 0, 65573, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 65577, 1, 0, 65578, 1, 0, 65579, 1, 0, 65580, 1, 0, 65581, 1, 0, 65582, 1, 0, 65583, 1, 0, 65584, 1, 0, 65585, 1, 0, 65586, 1, 0, 65604, 3, 0, 65610, 1, 0, 196605, 1, 0, 131139, 3, 0, 131140, 3, 0, 131146, 1, 0, 262141, 1, 0, 196641, 3, 0, 196642, 3, 0, 196643, 3, 0, 196644, 3, 0, 196645, 3, 0, 196646, 3, 0, 196647, 3, 0, 196648, 3, 0, 196649, 3, 0, 196650, 3, 0, 196651, 3, 0, 196652, 3, 0, 196653, 3, 0, 196654, 3, 0, 196655, 3, 0, 196656, 3, 0, 196657, 3, 0, 196658, 3, 0, 196659, 3, 0, 196660, 3, 0, 196682, 1, 0, 327677, 1, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 262176, 3, 0, 262177, 3, 0, 262178, 1, 0, 262179, 1, 0, 262180, 1, 0, 262181, 1, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 262187, 1, 0, 262188, 1, 0, 262189, 1, 0, 262190, 1, 0, 262191, 1, 0, 262192, 1, 0, 262193, 1, 0, 262194, 1, 0, 262195, 1, 0, 262196, 1, 0, 262197, 3, 0, 262198, 3, 0, 262199, 3, 0, 262200, 3, 0, 262201, 3, 0, 262202, 3, 0, 262203, 3, 0, 262204, 3, 0, 262218, 1, 0, 262219, 1, 0, 393213, 1, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 327712, 1, 0, 327713, 1, 0, 327714, 1, 0, 327740, 1, 0, 327741, 3, 0, 327742, 3, 0, 327743, 3, 0, 327744, 3, 0, 327745, 3, 0, 327746, 3, 0, 327747, 3, 0, 327748, 3, 0, 327749, 3, 0, 327750, 3, 0, 327751, 3, 0, 327752, 3, 0, 327754, 1, 0, 327755, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393241, 1, 0, 393242, 1, 0, 393276, 1, 0, 393277, 1, 0, 393278, 1, 0, 393279, 1, 0, 393280, 1, 0, 393281, 1, 0, 393282, 1, 0, 393283, 1, 0, 393284, 1, 0, 393285, 1, 0, 393286, 1, 0, 393287, 1, 0, 393288, 1, 0, 393289, 1, 0, 393290, 1, 0, 393291, 1, 0, 1114158, 1, 0 )

[node name="Platform" type="TileMap" parent="."]
collision_layer = 2
format = 1

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="Enemy_ground" parent="Enemy_Container" instance=ExtResource( 6 )]
position = Vector2( 3500, 150 )
constraint_left = Vector2( 2200, 150 )
constraint_right = Vector2( 3800, 220 )

[node name="Enemy_flying" parent="Enemy_Container" instance=ExtResource( 7 )]
position = Vector2( 2500, -150 )
look_speed = 95

[node name="Weapon_Container" type="Node2D" parent="."]

[node name="Foreground" type="TileMap" parent="."]
collision_layer = 0
collision_mask = 0
format = 1

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = -290
limit_top = -250
limit_right = 5000
limit_bottom = 500
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="HUD" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Effects" type="Node2D" parent="."]

[node name="Ingredients_Container" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Food_Pasta" parent="Ingredients_Container" instance=ExtResource( 9 )]
visible = false
position = Vector2( 4000, 250 )

[node name="Food_Sauce" parent="Ingredients_Container" instance=ExtResource( 10 )]
visible = false
position = Vector2( 4500, 250 )
